--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auto-launch": "^5.0.5",
+    "node-cmd": "^3.0.0",
     "robotjs": "^0.6.0"
   }
 }
